--- a/survey-banner/banner.html
+++ b/survey-banner/banner.html
@@ -2,11 +2,8 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <div class="survey">
-		<img src="comment2.png" class="surveyicon">
-	<section>
-		<p>We'd love feedback on your experience using City websites and other online services.</p>
-		<p>
-		<a href="https://sfmoci.typeform.com/to/gv2T4Z" target="_blank">Take a short 5-minute survey.</a>
-	</section>
-	</p>
+		<img src="http://ashleymmeyers.github.io/sf/survey-banner/comment2.png" class="surveyicon"> 
+		<p>We'd love feedback on your experience using City online services: 
+			<a href="https://sfmoci.typeform.com/to/gv2T4Z" target="_blank">Take a short 5-minute survey.</a>
+		</p>
 </div>
