Resolve issues with City CSS; update CSS location

--- a/survey-banner/banner.html
+++ b/survey-banner/banner.html
@@ -1,4 +1,5 @@
-<link type="text/css" rel="stylesheet" href="banner.css">
+<link type="text/css" rel="stylesheet" href="http://ashleymmeyers.github.io/sf/survey-banner/banner.css">
+
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 
 <div class="survey">
