--- a/survey-banner/banner.html
+++ b/survey-banner/banner.html
@@ -1,10 +1,17 @@
+<html>
+<head>
 <link type="text/css" rel="stylesheet" href="http://ashleymmeyers.github.io/sf/survey-banner/banner.css">
 
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+</head>
 
+<body>
 <div class="survey">
 		<img src="http://ashleymmeyers.github.io/sf/survey-banner/comment2.png" class="surveyicon"> 
 		<p>We'd love feedback on your experience using City online services: 
 			<a href="https://sfmoci.typeform.com/to/gv2T4Z" target="_blank">Take a short 5-minute survey.</a>
 		</p>
 </div>
+</body>
+
+</html>
