Convert to rem and add viewport tag

--- a/survey-banner/banner.html
+++ b/survey-banner/banner.html
@@ -1,6 +1,8 @@
 <html>
 <head>
-<link type="text/css" rel="stylesheet" href="http://ashleymmeyers.github.io/sf/survey-banner/banner.css">
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+<link type="text/css" rel="stylesheet" href="banner.css">
 
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
 </head>
