Made class name more unique

--- a/survey-banner/banner.html
+++ b/survey-banner/banner.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-<div class="survey">
-		<img src="http://ashleymmeyers.github.io/sf/survey-banner/comment2.png" class="surveyicon"> 
+<div class="pubexpsurvey">
+		<img src="http://ashleymmeyers.github.io/sf/survey-banner/comment2.png" class="pubexpsurveyicon"> 
 		<p>We'd love feedback on your experience using City online services: 
 			<a href="https://sfmoci.typeform.com/to/gv2T4Z" target="_blank">Take a short 5-minute survey.</a>
 		</p>
