--- a/parking-permit/permit-application.html
+++ b/parking-permit/permit-application.html
@@ -3,6 +3,8 @@
 	<title>Apply for a Residential Area Parking Permit</title>
 	<link rel="stylesheet" type="text/css" href="css/parking-permit.css">
 	<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
 
